# diesel

./: .travis.yml  CHANGELOG.md  azure-pipelines.yml
.github/workflows/: ci.yml
diesel/: Cargo.toml
diesel_compile_tests/: Cargo.toml
diesel_compile_tests/tests/compile-fail/: cannot_use_expression_methods_on_tuples.rs  codegen_does_not_add_save_changes_method_on_structs_without_primary_key.rs  custom_returning_requires_nonaggregate.rs  custom_returning_requires_selectable_expression.rs  exists_can_only_take_subselects.rs  filter_cannot_take_comparison_for_columns_from_another_table.rs  ilike_only_compiles_for_pg.rs  join_with_explicit_on_requires_valid_boolean_expression.rs  pg_specific_expressions_cant_be_used_in_a_sqlite_query.rs  pg_upsert_do_update_requires_valid_update.rs  returning_cannot_be_called_twice.rs  right_side_of_left_join_requires_nullable.rs  sqlite_insert_or_ignore_cannot_be_used_on_pg.rs  sqlite_upsert_cannot_be_used_on_pg.rs  subselect_requires_correct_type.rs  table_column_names.rs  table_invalid_syntax_1.rs  table_invalid_syntax_2.rs  table_invalid_syntax_3.rs  update_requires_set.rs  update_requires_valid_where_clause.rs  user_defined_functions_follow_same_selection_rules.rs
diesel_compile_tests/tests/ui/: as_changeset_struct_with_only_primary_key.rs  as_changeset_struct_with_only_primary_key.stderr  belongs_to_incorrect_lifetime_syntax.rs  queryable_by_name_requires_table_name_or_sql_type_annotation.rs
diesel_derives/: Cargo.toml
diesel_migrations/: Cargo.toml
diesel_tests/: Cargo.toml
guide_drafts/: trait_derives.md
(+104 files in other folders)
