[package]
name = "diesel_compile_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[workspace]

[dependencies]
diesel = { version = "1.4.0", default-features = false, features = ["extras", "sqlite", "postgres", "mysql"] }
compiletest_rs = { version = "=0.3.22", features = [ "stable" ] }

[replace]
"diesel:1.4.2" = { path = "../diesel" }
"diesel_derives:1.4.0" = { path = "../diesel_derives" }
